# apple-instruments-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/apple_instruments_mcp/: __init__.py  __main__.py  analysis.py  server.py
src/apple_instruments_mcp/analysis/: __init__.py  allocations.py  launch.py  leaks.py  models.py  network.py  orchestrator.py  presets.py  quality.py  severity.py  symbolicate.py  targets.py  time_profile.py  xctrace.py  xml_helpers.py
tests/: test_analysis.py
